--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ body {
   border: 1px inset rgba(100, 100, 100, 0.2);
 }
 
+.search-button:disabled {
+  cursor: wait;
+}
+
 .movie-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -49,7 +53,7 @@ body {
   gap: 1rem;
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 1300px) {
   .movie-grid {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
