--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,21 @@ body {
   margin: 0 auto;
 }
 
+.movie-review {
+  width: 80vw;
+}
+
+.star-icon {
+  --icon-size: 32px;
+  cursor: pointer;
+  height: var(--icon-size);
+  width: var(--icon-size);
+}
+
+.star-icon-filled {
+  fill: gold;
+}
+
 @media (max-width: 1300px) {
   .movie-grid {
     grid-template-columns: repeat(3, 1fr);
